--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   sliding_sheet: ^0.5.2
   font_awesome_flutter: ^10.2.1
+  share_plus: ^4.5.0
 
 dev_dependencies:
   flutter_test:
