--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   sliding_sheet: ^0.5.2
   font_awesome_flutter: ^10.2.1
-  share_plus: ^4.5.0
+  url_launcher: ^6.1.6
+  iconsax: ^0.0.8
+  splash_screen_view: ^3.0.0
 
 dev_dependencies:
   flutter_test:
